corrected left/right alignment of show-layer-content

--- a/wp-content/themes/carnes-crossroads-2015/scss/_page-templates.scss
+++ b/wp-content/themes/carnes-crossroads-2015/scss/_page-templates.scss
@@ -151,6 +151,28 @@ $navbar-offset: 135px;
         background-repeat: no-repeat;
         background-size: cover;
 
+        @media (max-width: 1150px) {
+            margin-top: 120px;
+        }
+
+        @media (max-width: $screen-xs-max) {
+            margin-top: 0;
+            height: 330px;
+        }
+
+        @media (max-width: 737px) {
+            height: 400px;
+        }
+
+        &--homes {
+            @extend .hero__page;
+
+            @media (max-width: $screen-xs-max) {
+                height: 440px;
+                background-position: center left;
+            }
+        }
+
         &:before {
             content: '';
             position: absolute;
@@ -163,24 +185,6 @@ $navbar-offset: 135px;
             background: -webkit-linear-gradient(top, rgba($black,1) 0%,rgba($black,0) 100%);
             background: linear-gradient(to bottom, rgba($black,1) 0%,rgba($black,0) 100%);
             z-index: 1;
-          }
-
-        @media (max-width: 1150px) {
-            margin-top: 120px;
-        }
-
-        @media (max-width: $screen-xs-max) {
-            margin-top: 0;
-            height: 400px;
-        }
-
-        &--homes {
-            @extend .hero__page;
-
-            @media (max-width: $screen-xs-max) {
-                height: 440px;
-                background-position: center left;
-            }
         }
     }
 
