--- a/wp-content/themes/carnes-crossroads-2015/style.css
+++ b/wp-content/themes/carnes-crossroads-2015/style.css
@@ -5733,6 +5733,20 @@ This file is generated by `grunt build`, do not edit it by hand.
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover; }
+    @media (max-width: 1150px) {
+      .hero__page, .hero__page--homes {
+        margin-top: 120px; } }
+    @media (max-width: 767px) {
+      .hero__page, .hero__page--homes {
+        margin-top: 0;
+        height: 330px; } }
+    @media (max-width: 737px) {
+      .hero__page, .hero__page--homes {
+        height: 400px; } }
+    @media (max-width: 767px) {
+      .hero__page--homes {
+        height: 440px;
+        background-position: center left; } }
     .hero__page:before, .hero__page--homes:before {
       content: '';
       position: absolute;
@@ -5745,17 +5759,6 @@ This file is generated by `grunt build`, do not edit it by hand.
       background: -webkit-linear-gradient(top, black 0%, transparent 100%);
       background: linear-gradient(to bottom, black 0%, transparent 100%);
       z-index: 1; }
-    @media (max-width: 1150px) {
-      .hero__page, .hero__page--homes {
-        margin-top: 120px; } }
-    @media (max-width: 767px) {
-      .hero__page, .hero__page--homes {
-        margin-top: 0;
-        height: 400px; } }
-    @media (max-width: 767px) {
-      .hero__page--homes {
-        height: 440px;
-        background-position: center left; } }
   .hero__article {
     position: relative;
     margin-top: 135px;
